[project]
name = "ComfyUI Custom Selector"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/gasparuff/CustomSelector.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pixible"
DisplayName = "Custom Selector"
Icon = ""
