[project]
name = "comfyui-customselector"
description = "Helps deciding different settings depending on the input string"
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/gasparuff/CustomSelector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pixible"
DisplayName = "comfyui-customselector"
Icon = ""
